# pyRFIDreader

./: LICENSE  README.md  pyproject.toml
examples/: example1_constant_read.py  example2_read_epc.py  example3_write_epc.py  example4_read_user_data.py  setup_helper.py
sparkfun_rfid/: __init__.py  constants.py  rfid_reader.py
