[project]
name = "sparkfun-rfid-reader"
version = "1.2.0"
description = "Python library for SparkFun UHF RFID Reader (ThingMagic M6E Nano and M7E Hecto)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyserial>=3.5",
]
authors = [
    { name = "SparkFun Electronics" },
    { name = "Sebastian Plamauer", email = "sebastian.plamauer@motius.de" },
]
license = "MIT"